# ft_flutter

./: .gitattributes  .gitignore  .gn  .lfsconfig  BUILD.gn  README.en.md  README.md  build.sh
ace_build/: BUILD.gn  flutter_config.gni
ace_build/glfw/: BUILD.gn
ace_build/harfbuzz/: BUILD.gn
ace_build/icu/: BUILD.gn
ace_build/libtxt/: BUILD.gn
ace_build/skia/: BUILD.gn
engine/flutter/ci/: check_gn_format.py
engine/flutter/flow/: BUILD.gn  compositor_context.cc  compositor_context.h  debug_print.cc  debug_print.h  embedded_views.h  instrumentation.cc  instrumentation.h  matrix_decomposition.h  paint_utils.cc  paint_utils.h  raster_cache.cc  raster_cache.h  raster_cache_unittests.cc  scene_update_context.h  skia_gpu_object.h  texture.h  view_holder.h
engine/flutter/flow/layers/: backdrop_filter_layer.h  child_scene_layer.h  color_filter_layer.h  filter_layer.h  layer.cc  layer.h  layer_tree.cc  layer_tree.h  mask_layer.cc  mask_layer.h  performance_overlay_layer.cc  performance_overlay_layer_unittests.cc  physical_shape_layer.cc  platform_view_layer.h  shader_mask_layer.h  texture_layer.h
engine/flutter/flow/ohos_layers/: backdrop_filter_layer.cpp  backdrop_filter_layer.h  clip_path_layer.h  clip_rect_layer.cpp  clip_rrect_layer.cpp  clip_rrect_layer.h  filter_layer.h  layer.h  layer_tree.cpp  layer_tree.h  layer_tree_builder.cpp  layer_tree_builder.h  mask_layer.cpp  mask_layer.h  opacity_layer.h  paint_context.h  picture_layer.h  shader_mask_layer.h  texture_layer.h  transform_layer.h
engine/flutter/lib/ui/: BUILD.gn  io_manager.h  ui_dart_state.h
engine/flutter/lib/ui/compositing/: scene.cc  scene.h  scene_builder.cc  scene_builder.h
engine/flutter/lib/ui/painting/: canvas.cc  canvas.h  codec.cc  codec.h  color_filter.h  gradient.h  image.h  image_decoder.cc  (+17 more)
engine/flutter/shell/common/: ace_engine.cc  ace_platform_view.cc  ace_shell.cc  engine.cc  engine.h  persistent_cache.h  platform_view.cc  platform_view.h  rasterizer.cc  shell_io_manager.cc  shell_io_manager.h  skia_event_tracer_impl.cc  surface.cc  surface.h
ft_build/: BUILD.gn  flutter_config.gni
ft_build/ace_config/: ace_config.gni  config.gni  platform.gni
ft_build/freetype/: BUILD.gn
ft_build/glfw/: BUILD.gn
ft_build/harfbuzz/: BUILD.gn
ft_build/icu/: BUILD.gn
ft_build/libjpeg/: BUILD.gn
ft_build/libpng/: BUILD.gn
ft_build/libtxt/: BUILD.gn
ft_build/libwebp/: BUILD.gn
ft_build/sfntly/: BUILD.gn
ft_build/skia/: BUILD.gn  make_skia_include_dir.py
glfw/: BUILD.gn
project_build/: build.sh  builder.py  install_header_files.txt  prebuild.sh  prebuildrpm.sh
project_build/builder/: __init__.py
project_build/builder/commands/: build.py  format.py  package.py
project_build/builder/common/: env_checker.py  logger.py  prebuild.py  utils.py
project_build/configs/: requirements.txt  system_deps.toml
project_build/gn/: BUILD.gn  BUILDCONFIG.gn  fangtian.gni
project_build/gn/configs/: BUILD.gn  arm.gni
project_build/gn/configs/compiler/: BUILD.gn  compiler.gni
project_build/gn/configs/fangtian/: BUILD.gn  abi.gni
project_build/gn/configs/sanitizers/: sanitizers.gni
project_build/gn/configs/system_libs/: BUILD.gn
project_build/gn/templates/: build_targets.gni  ft_advanced_copy.gni  ft_executable.gni  ft_prebuilt_etc.gni  ft_shared_library.gni  ft_source_set.gni  ft_static_library.gni
project_build/gn/toolchain/: cc_wrapper.gni
project_build/gn/toolchain/linux/: BUILD.gn
skia/src/ports/skia_ohos/: FontConfig_ohos.cpp
(+11 files in other folders)
